src/kubernetes/sawtooth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sawtooth-0
  labels:
    app: sawtooth-0
spec:
    replicas: 1
    selector:
      matchLabels:
        app: sawtooth-0
    template:
        metadata:
          labels:
            app: sawtooth-0
        spec:
          containers:
            - name: sawtooth-validator
              image: hyperledger/sawtooth-validator:nightly
              resources:
                requests:
                  cpu: 500m
                  memory: 128Mi
                limits:
                  cpu: 500m
                  memory: 128Mi
              imagePullPolicy: Always
              ports:
                - name: tp
                  containerPort: 4004
                - name: consensus
                  containerPort: 5050
                - name: validators
                  containerPort: 8800
              command:
                - bash
              args:
                - -c
                - "sawadm keygen \
              && sawtooth keygen my_key \
              && sawset genesis -k /root/.sawtooth/keys/my_key.priv \
              && sawset proposal create \
                -k /root/.sawtooth/keys/my_key.priv \
                sawtooth.consensus.algorithm.name=Devmode \
                sawtooth.consensus.algorithm.version=0.1 \
                -o config.batch \
              && sawadm genesis config-genesis.batch config.batch \
              && sawtooth-validator -vv \
                  --endpoint tcp://$SAWTOOTH_0_SERVICE_HOST:8800 \
                  --bind component:tcp://eth0:4004 \
                  --bind consensus:tcp://eth0:5050 \
                  --bind network:tcp://eth0:8800"

            - name: sawtooth-shell
              image: hyperledger/sawtooth-shell:nightly
              resources:
                requests:
                  cpu: 500m
                  memory: 128Mi
                limits:
                  cpu: 500m
                  memory: 128Mi
              imagePullPolicy: Always
              command:
                - bash
              args:
                - -c
                - "sawtooth keygen && tail -f /dev/null"
