src/kubernetes/tp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sawtooth-web
spec:
  selector:
    app: sawtooth-web
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
